--- a/karaf/assembly/src/main/filtered-resources/templates/README
+++ b/karaf/assembly/src/main/filtered-resources/templates/README
@@ -1,4 +1,4 @@
 
-A folder for pre-configure pool templates
+A folder for pre-configure poolSpec templates
 
 See cdh3.xml.sample to learn more about the expected format.
